# duetto

./: .env  .env.example  architecture.md  pyproject.toml  test_feishu.py
duetto/: __init__.py  config.py  engine.py  main.py  schemas.py  server.py  utils.py
duetto/collectors/: __init__.py  base.py  fda.py  sec_edgar.py  tradingview.py
duetto/filters/: __init__.py  alert_filter.py
duetto/models/: __init__.py  alert.py
duetto/notifiers/: base.py  feishu.py
duetto/processors/: base.py  dedup.py  filter.py
duetto/services/: __init__.py  alert_engine.py  feishu.py  websocket_manager.py
duetto/services/notifications/: __init__.py  ai_provider.py  notifier.py  template.py
duetto/utils/: __init__.py  cache.py  ticker_mapper.py
static/: index.html
tests/: test_config.py  test_processors.py
